--- a/X/imapsync_form.css
+++ b/X/imapsync_form.css
@@ -1,6 +1,6 @@
 
 
-/* $Id: imapsync_form.css,v 1.9 2020/06/15 11:55:50 gilles Exp gilles $ */
+/* $Id: imapsync_form.css,v 1.10 2021/09/21 09:25:53 gilles Exp gilles $ */
 
 body {
   color: black;
@@ -27,6 +27,10 @@ body {
         font-size: 1.4em ;
         margin: 0 0 0px ;
         height: 50px ;
+}
+
+#imapsync_log_bottom {
+        scroll-margin-top: 300px ;
 }
 
 .progress {
